*SVN*

* Added better error handling for regexp caching expiration

* Fixed handling of requests coming from unknown HTTP methods not to kill the server

* Added that both AssetHelper#stylesheet_link_tag and AssetHelper#javascript_include_tag now accept an option hash as the last parameter, so you can do stuff like: stylesheet_link_tag "style", :media => "all"

* Added FormTagHelper#image_submit_tag for making submit buttons that uses images

* Added ActionController::Base.asset_host that will then be used by all the asset helpers. This enables you to easily offload static content like javascripts and images to a separate server tuned just for that.

* Fixed action/fragment caching using the filestore when a directory and a file wanted to to use the same name. Now there's a .cache prefix that sidesteps the conflict #1188 [imbcmdth@hotmail.com]

* Fixed missing id uniqueness in FormTag#radio_button #1207 [Jarkko]

* Fixed assert_redirected_to to work with :only_path => false #1204 [Alisdair McDiarmid]

* Fixed render_partial_collection to output an empty string instead of nil when handed an empty array #1202 [Ryan Carver]

* Improved the speed of regular expression expirations for caching by a factor of 10 #1221 [Jamis Buck]

* Removed dumping of template assigns on the rescue page as it would very easily include a ton of data making page loads take seconds (and the information was rarely helpful) #1222

* Added BenchmarkHelper that can measure the execution time of a block in a template and reports the result to the log. Example:
  
    <% benchmark "Notes section" do %>
      <%= expensive_notes_operation %>
    <% end %>
  
   Will add something like "Notes section (0.345234)" to the log.

* Added ActionController::Caching::Sweeper as an improved an easier to use sweeper. The new sweepers work on a single-step approach instead of two-steps like the old ones. Before

    def after_save(record)
      @list = record.is_a?(List) ? record : record.list
    end
    