@@ -1,5 +1,7 @@
 *SVN*
 
+* Added functionality to assert_tag, so you can now do tests on the siblings of a node, to assert that some element comes before or after the element in question, or just to assert that some element exists as a sibling #1226 [Jamis Buck]
+
 * Added better error handling for regexp caching expiration
 
 * Fixed handling of requests coming from unknown HTTP methods not to kill the server
